@@ -1,6 +1,7 @@
                         GPSD project news
 
 3.24.1~dev: unreleased
+  Have ubxtool "-w 0" run forever.
 
 3.24: 2022-04-22
   NTRIP 2.0 now works.  But still only plain HTML, not RTP, etc.
